# wardn

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  install.sh
.github/workflows/: release.yml
demo/: demo.sh  record.sh  wardn-demo.cast
docs/: ARCHITECTURE.md  PLAN.md  blog-wardn.md  launch-plan.md
src/: config.rs  lib.rs  main.rs
src/cli/: migrate_cmd.rs  mod.rs  serve_cmd.rs  setup_cmd.rs  vault_cmd.rs
src/daemon/: mod.rs
src/mcp/: mod.rs  tools.rs
src/migrate/: mod.rs
src/migrate/scanners/: credentials.rs
src/proxy/: inject.rs  mod.rs  rate_limit.rs  strip.rs
src/vault/: encryption.rs  mod.rs  placeholder.rs  storage.rs
tests/: cli_tests.rs  proxy_tests.rs  vault_tests.rs
